- added a contact-template - fixed a layout issue (padding-bottom on body-tag)

--- a/contents/styles/me.styl
+++ b/contents/styles/me.styl
@@ -13,5 +13,3 @@
 	float left
 	h1
 		margin 5px 0 20px -10px
-.clear
-	margin-bottom 125px
