--- a/contents/styles/theme.styl
+++ b/contents/styles/theme.styl
@@ -10,7 +10,7 @@ body
 	font-weight lighter
 	line-height 1.5em
 	margin 0
-	padding 0
+	padding 0 0 125px 0
 	background-color white
 	-webkit-animation fadein 2s
 
@@ -106,7 +106,7 @@ footer
 
 #page
 	width 65%
-	margin 5px 25px 125px 25px
+	margin 5px 25px 0 25px
 	padding 20px
 	min-height 300px
 	background lightgray
@@ -161,7 +161,6 @@ footer
 
 .clear 
 	clear both
-	margin-bottom 125px
 
 @-webkit-keyframes fadein 
 	from
