--- a/contents/styles/wallpaper.styl
+++ b/contents/styles/wallpaper.styl
@@ -1,5 +1,5 @@
 #wallpaper
-	margin 0 0 125px 0
+	margin 0
 	line-height 0
 	width 95%
 	img
